fixed navbar overlap and resume link

--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,11 @@
 
 .landing 
 {
+    background-color: rgb(249, 247, 247);
+    width: 100%;
     background-image: url("./images/img12.jpeg");
-    background-size: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
+    max-height: fit-content;
 }
 
 .intro_header
@@ -37,7 +36,7 @@
 {
     font-size: 1.5em;
     border-radius: 10px;
-    padding: 10px;
+    padding: 20px;
     width: 50%;
     margin: auto;
     text-align: left;
@@ -65,6 +64,11 @@
     margin-right: 30vh;
 }
 
+body
+{
+    padding-top: 40px;
+}
+
 .navbar 
 {
     overflow: hidden;
@@ -73,6 +77,8 @@
     width: 100%;
     display: flex;
     justify-content: space-around;
+    top: 0;
+    z-index: 1;
 }
   
 .navbar a 
@@ -97,9 +103,9 @@
     font-size: 3em;
     font-weight: 1;
     text-align: center;
-    padding-top: 10vh;
+    padding-top: 5vh;
     color: white;
-    padding-bottom: 10vh;
+    padding-bottom: 5vh;
     
 
     border: 2px solid #F6B352;
@@ -108,6 +114,8 @@
     margin: auto;
     text-align: center;
     background-color: #1F2124;
+    margin-bottom: 20px;
+    transform: translateY(30px);
 }
 
 .portfolio
@@ -122,7 +130,7 @@
     background-color: #1F2124;
     border-radius: 10px;
     width: 35vw;
-    height: 35vh;
+    height: 45vh;
     margin: 5vh;
     padding: 2vh;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -181,17 +189,44 @@
     width: 3vh;
 }
 
-.card_image:hover
-{
-    transform: scale(1.2);
-    cursor: pointer;
-}
-
 .card_holder_row
 {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.card_button_holder
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.card_button
+{
+    display: block;
+    background: #F6B352;
+    color: white;
+    padding: 15px 20px;
+    margin: 20px 0;
+    border-radius: 10px;
+    box-shadow: rgba(0,0,0,0.9);
+    text-decoration: none;
+}
+
+.card_button_link
+{
+    text-decoration: none;
+}
+
+.card_button:hover
+{
+    background: #f9d29b;
+    color: white;
+    cursor: pointer;
+    text-decoration: none;
 }
 
 .qualifications
@@ -250,6 +285,8 @@
 .resume_button:hover 
 {
     background-color: #f9d29b;
+    color: white;
+    cursor: pointer;
 }
 
 
